# dcmview

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
azure-pipelines/: vscode-marketplace.yml
docs/: jupyterlab-extension-feasibility.md  large-directory-scalability-plan.md  npm-audit-2026-06-09.md  releasing.md  structural-review-remediation-plan.md  vscode-bridge-remote-reliability-plan.md  vscode-bridge-review-findings.md  vscode-dicom-auto-open-feasibility.md  vscode-extension-feasibility.md  vscode-extension-local-testing.md
docs/contracts/: bridge-protocol.json  vscode-bridge-registry.json
examples/: generate_test_fixtures.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  api.ts
frontend/src/lib/: FileNavigator.svelte  FrameSlider.svelte  ImageViewport.svelte  OpenImageTabs.svelte  StatusBar.svelte  TagPanel.svelte  ViewerToolbar.svelte  annotationGeometry.ts  viewerTools.ts
python/dcmview_py/: __main__.py  wrapper.py
python/tests/: test_release_archive.py  test_vscode_packaging.py  test_wrapper.py
scripts/: build_linux_wheel.sh  check_versions.py  download_github_release_assets.py  generate_frontend_types.py  package_release_archive.py  package_vscode_targets.py  render_homebrew_formula.py  smoke_release_binary.py  stage_vscode_binaries.py  verify_wheel_install.py
src/: annotations.rs  loader.rs  main.rs  pixels.rs  server.rs  tunnel.rs  types.rs
tests/: integration.rs
tests/fixtures/: README.md  golden-image-no-pixels.dcm  golden-jpeg-baseline-large-single-frame.dcm  golden-jpeg-baseline-multiframe-bot.dcm  golden-jpeg-baseline-single-frame.dcm  golden-no-pixels-sr.dcm  golden-uncompressed-u16-multiframe.dcm
tests/integration/: annotations_endpoint.rs  api_contract.rs  golden_fixtures.rs  loader_discovery.rs  pixels_jp2_decode.rs  pixels_jpeg_decode.rs  pixels_raw_endpoint.rs  pixels_uncompressed.rs  remote_fixtures.rs  server_minimal.rs  support.rs  tags_endpoint.rs  tunnel_lifecycle.rs
vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscode/src/: extension.ts
vscode/src/test/: runTest.ts
vscode/src/test/suite/: extension.test.ts  index.ts
