[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "dcmview-py"
version = "0.1.1"
description = "Fast temporary DICOM viewer for local and remote research workflows"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Beatrice Brown-Mulry" }]
license = "MIT"
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: OS Independent",
]

[project.scripts]
dcmview = "dcmview_py.__main__:main"
dcmview-py = "dcmview_py.__main__:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
include = ["dcmview_py*"]

[tool.setuptools.package-data]
dcmview_py = ["bin/*"]
